2009-05-27  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Change deprecated Tooltip code.
	  SoundConverter now requires GTK 2.12+!
	  (thanks Matt)

2009-05-19  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Reset status after clearing file list.
	  (Thanks Sean)
	* src/soundconverter.py: Allow loading glade file from source folder.
	  (Thanks Geoff)

2009-05-04  Gautier Portet <kassoulet gmail com>

	* po/fr.po: Update french translation. (thanks Olivier)
	* src/soundconverter.py: Fix unhandled exception when 
	  removing original files went bad.
	  (fix lp:278782, thanks surreal)

2009-04-22  Gautier Portet <kassoulet gmail com>

	* po/bg.po: Add Bulgarian translation. (thanks Nikola)


2009-05-19  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Reset status after clearing file list.
	  (Thanks Sean)

2009-05-04  Gautier Portet <kassoulet gmail com>

	* po/fr.po: Update french translation. (thanks Olivier)

2009-05-19  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Reset status after clearing file list.
	  (Thanks Sean)

2009-04-22  Gautier Portet <kassoulet gmail com>

	* po/bg.po: Add Bulgarian translation. (thanks Nikola)

2009-04-14  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Fix TagReader freeze when adding
	  m4p files. (lp:263889)
	  release 1.4.3

2009-03-11  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Sanitize URI handling.

2009-03-10  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Fix spelling errors.
	  Removed some translation of log() messages.
	  (thanks Hew)

2009-03-10  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Display an error dialog
	  when something bad happened while encoding.

2009-02-22  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Add notification at the end of
	 conversion.

2009-01-26  Gautier Portet <kassoulet gmail com>
